syntax = "proto3";
package friend_service;

message FriendRef {
  int64 user_id = 1;
}

message AddFriendReq {
  int64 user_id = 1;
  int64 friend_id = 2;
}

message AddFriendResp {
  bool added = 1;
}

message RemoveFriendReq {
  int64 user_id = 1;
  int64 friend_id = 2;
}

message RemoveFriendResp {
  bool removed = 1;
}

message IsFriendReq {
  int64 user_id = 1;
  int64 friend_id = 2;
}

message IsFriendResp {
  bool is_friend = 1;
}

message GetFriendsReq {
  int64 user_id = 1;
}

message GetFriendsResp {
  repeated int64 friend_ids = 1;
}

message GetFriendsPageReq {
  int64 user_id = 1;
  uint64 page = 2;
  uint64 page_size = 3;
}

message GetFriendsPageResp {
  repeated int64 friend_ids = 1;
}

message ClearFriendsReq {
  int64 user_id = 1;
}

message ClearFriendsResp {}

service FriendService {
  rpc AddFriend(AddFriendReq) returns (AddFriendResp);
  rpc RemoveFriend(RemoveFriendReq) returns (RemoveFriendResp);
  rpc IsFriend(IsFriendReq) returns (IsFriendResp);
  rpc GetFriends(GetFriendsReq) returns (GetFriendsResp);
  rpc GetFriendsPage(GetFriendsPageReq) returns (GetFriendsPageResp);
  rpc ClearFriends(ClearFriendsReq) returns (ClearFriendsResp);
}
